added the challenges

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <nav>
           <a href="blog.html">Blog</a>
-          <a href="#">Challenges</a>
+          <a href="Challenge/challenge.html">Challenges</a>
           <a href="flexbox.html">Flexbox</a>
           <a href="css-grid.html">CSS Grid</a>
         </nav>
@@ -162,7 +162,7 @@
         </ul>
       </aside>
     </div>
-    
+
       <footer id="copyright">
         Copyright &copy; 2027 by The Code Magazine.
       </footer>
