--- a/css-grid.html
+++ b/css-grid.html
@@ -40,6 +40,17 @@
         margin: 40px;
 
         /* CSS GRID */
+        /* grid-template-rows: 300px 200px; */
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr 1fr;
+        /* height: 500px; */
+        /* gap: 10px; */
+        column-gap: 20px;
+        row-gap: 40px;
+
+        /* TEMPORARY */
+        display: none;
       }
 
       .container--2 {
@@ -53,6 +64,35 @@
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
+        gap: 50px;
+
+        /* Aligning tracks inside container:display:
+        distribute empty space */
+        justify-content: center;
+        /* justify-content: space-between; */
+        align-content: center;
+
+        /* Aligning items INSIDE celss: moving items around cells */
+        align-items: center;
+        justify-items: center;
+      }
+
+      .el--8 {
+        grid-column: 2/3;
+        grid-row: 1/2;
+      }
+
+      .el--3{
+        align-self: center;
+        justify-self: center;
+      }
+
+      .el--2 {
+        grid-column: 1/2;
+        grid-row: 2/3;
       }
     </style>
   </head>
